--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,14 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 0px 20px;
-    background-color: rgb(217, 255, 2);
+    background-color: rgb(81, 160, 153);
 }
 
 h1{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+#id_insertar form *{
+    margin-top: 30px;
 }
 
 #id_divbuscar{
@@ -38,15 +41,14 @@ h1{
 
 #id_bbuscar{
     height: 31px;
-    background-color: rgba(8, 85, 8, 0.541);
+    background-color: rgb(39, 75, 72);
     color: white;
     border-radius: 10px;
 }
 
-#id_contenedor{
-    margin: 50px auto;
-    width: 60%;
+#id_cuerpo{
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
 }
 
@@ -55,7 +57,8 @@ h1{
     border: 1px solid;
     border-radius: 10px;
     padding: 0px 25px;
-    width: 300px;
+    width: 400px;
+    height: 500px;
     margin-left: 200px;
     margin-top: 80px;
 }
@@ -69,21 +72,44 @@ h1{
 }
 
 #id_listado{
-    margin-right: 20px;
-    display: flex;
-    height: 70%;
-    flex-direction: column;
-    justify-content: space-evenly;
+    padding: 0px 25px;
+    width: fit-content;
+    margin-top: 80px;
+}
+
+#id_listado_buscar{
+    display: none;
+    width: 1000px;
+    border: 1px solid;
+    background-color: rgb(241, 240, 240);
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
+
+.eliminar{
+    background-color: red;
+    color: white;
+}
+
+.modificar{
+    background-color:khaki;
+}
+
+.eliminar, .modificar{
+    border-radius: 10px;
 }
 
 #id_guardar{
-    background-color: rgba(8, 85, 8, 0.541);
+    background-color: rgb(81, 160, 153);
     color: white;
     border-radius: 10px;
 }
 
 #id_tabla{
-    width: 800px;
+    width: 1000px;
+    border: 1px solid;
+    background-color: rgb(241, 240, 240);
+    border-radius: 10px;
 }
 
 #id_tabla th{
