--- a/css/style.css
+++ b/css/style.css
@@ -79,15 +79,32 @@ h1{
     padding: 0px 25px;
     width: fit-content;
     margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#id_listado_buscar{
+#listado_buscar_div{
     display: none;
-    width: 100%;
+    width: fit-content;
     border: 1px solid;
     background-color: rgb(241, 240, 240);
     border-radius: 10px;
     margin-bottom: 30px;
+    text-align: center;
+    font-weight: bold;
+    color: rgb(81, 160, 153)
+}
+
+
+#id_listado_buscar tr td{
+    text-align: center;
+    font-weight:100;
+    color: black;
+}
+
+#id_listado_buscar tr th{
+    color: black;
 }
 
 .eliminar{
